// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`authenticate > accepts valid v2 authentication ({ beta: false, useMevFactor: true, mevFactors: [ { asset: 'Flip', factor: 1, side: 'SELL', type: 'MEV' }, { asset: 'Flip', factor: -1, side: 'BUY', type: 'MEV' } ] }) 1`] = `
{
  "beta": false,
  "clientVersion": "2",
  "marketMaker": "web_team_whales",
  "mevFactors": {
    "buy": {
      "ArbEth": 0,
      "ArbUsdc": 0,
      "ArbUsdt": 0,
      "Btc": 0,
      "Eth": 0,
      "Flip": -1,
      "HubDot": 0,
      "HubUsdc": 0,
      "HubUsdt": 0,
      "Sol": 0,
      "SolUsdc": 0,
      "SolUsdt": 0,
      "Usdc": 0,
      "Usdt": 0,
      "Wbtc": 0,
    },
    "sell": {
      "ArbEth": 0,
      "ArbUsdc": 0,
      "ArbUsdt": 0,
      "Btc": 0,
      "Eth": 0,
      "Flip": -1,
      "HubDot": 0,
      "HubUsdc": 0,
      "HubUsdt": 0,
      "Sol": 0,
      "SolUsdc": 0,
      "SolUsdt": 0,
      "Usdc": 0,
      "Usdt": 0,
      "Wbtc": 0,
    },
  },
  "quotedAssets": {
    "ArbEth": false,
    "ArbUsdc": false,
    "ArbUsdt": false,
    "Btc": false,
    "Eth": false,
    "Flip": true,
    "HubDot": false,
    "HubUsdc": false,
    "HubUsdt": false,
    "Sol": false,
    "SolUsdc": false,
    "SolUsdt": false,
    "Usdc": false,
    "Usdt": false,
    "Wbtc": false,
  },
  "replenishmentFactors": {},
}
`;

exports[`authenticate > accepts valid v2 authentication ({ beta: true, useMevFactor: false, mevFactors: [ { asset: 'Flip', factor: 1, side: 'SELL', type: 'MEV' }, { asset: 'Flip', factor: -1, side: 'BUY', type: 'MEV' } ] }) 1`] = `
{
  "beta": true,
  "clientVersion": "2",
  "marketMaker": "web_team_whales",
  "mevFactors": {
    "buy": {
      "ArbEth": 0,
      "ArbUsdc": 0,
      "ArbUsdt": 0,
      "Btc": 0,
      "Eth": 0,
      "Flip": 0,
      "HubDot": 0,
      "HubUsdc": 0,
      "HubUsdt": 0,
      "Sol": 0,
      "SolUsdc": 0,
      "SolUsdt": 0,
      "Usdc": 0,
      "Usdt": 0,
      "Wbtc": 0,
    },
    "sell": {
      "ArbEth": 0,
      "ArbUsdc": 0,
      "ArbUsdt": 0,
      "Btc": 0,
      "Eth": 0,
      "Flip": 0,
      "HubDot": 0,
      "HubUsdc": 0,
      "HubUsdt": 0,
      "Sol": 0,
      "SolUsdc": 0,
      "SolUsdt": 0,
      "Usdc": 0,
      "Usdt": 0,
      "Wbtc": 0,
    },
  },
  "quotedAssets": {
    "ArbEth": false,
    "ArbUsdc": false,
    "ArbUsdt": false,
    "Btc": false,
    "Eth": false,
    "Flip": true,
    "HubDot": false,
    "HubUsdc": false,
    "HubUsdt": false,
    "Sol": false,
    "SolUsdc": false,
    "SolUsdt": false,
    "Usdc": false,
    "Usdt": false,
    "Wbtc": false,
  },
  "replenishmentFactors": {},
}
`;
